# master-baiter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_scam_type.md
skills/master-baiter/: SKILL.md
skills/master-baiter/references/: escalation-framework.md  persona-strategies.md  predator-indicators.md  reporting-formats.md  scam-taxonomy.md
skills/master-baiter/scripts/: delay_calculator.py  evidence_logger.py  fragment_message.py  gamification_engine.py  hash_verify.py  humanize_text.py  pyproject.toml  report_ftc.py  report_ic3.py  report_local_pd.py  report_ncmec.py  report_platform_abuse.py  seed_demo.py  test_evidence_logger.py
skills/master-baiter/server/: db.py  ingest.py  main.py  models.py  pyproject.toml  ws.py
skills/master-baiter/server/frontend/: app.js  index.html  style.css
skills/master-baiter/server/routes/: analytics.py  evidence.py  gamification.py  intel.py  reports.py  sessions.py
