[project]
name = "master-baiter-dashboard"
version = "1.0.0"
description = "Full-stack dashboard for master-baiter scam baiting skill"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "watchfiles>=1.0.0",
    "websockets>=14.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
